# bzlmodRio-photonlib

./: MODULE.bazel  WORKSPACE  maven_cpp_deps.bzl  maven_java_deps.bzl
.github/workflows/: auto_update.yml  build.yml  publish.yml
generate/: BUILD.bazel  MODULE.bazel  WORKSPACE  auto_update.py  generate.py  get_photonlib_dependencies.py  get_version.py  publish.py  vendor_dep.json
libraries/cpp/photonlib-cpp/: BUILD.bazel
libraries/cpp/photontargeting-cpp/: BUILD.bazel
libraries/java/photonlib-java/: BUILD.bazel
libraries/java/photontargeting-java/: BUILD.bazel
private/cpp/photonlib-cpp/: BUILD.bazel  shared.BUILD.bazel
private/cpp/photontargeting-cpp/: BUILD.bazel
private/cpp/photontargeting-jni/: BUILD.bazel
private/cpp/wpilibc-cpp/: BUILD.bazel
private/non_bzlmod_dependencies/: download_dependencies.bzl  setup_dependencies.bzl
tests/: MODULE.bazel  WORKSPACE
tests/cpp/photonlib-cpp/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/photontargeting-cpp/: BUILD.bazel  main.cpp  test.cpp
tests/java/photonlibjava/: BUILD.bazel  BasicTest.java  Main.java
tests/java/photontargetingjava/: BUILD.bazel  BasicTest.java  Main.java
