module(
    name = "bzlmodrio-photonlib",
    version = "v2025.3.2",
    compatibility_level = 2025,
)

bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "rules_java", version = "8.12.0")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2025-1.bcr5")
bazel_dep(name = "rules_bzlmodrio_jdk", version = "17.0.12-7.bcr1")
bazel_dep(name = "bzlmodrio-allwpilib", version = "2025.3.2.bcr1")
bazel_dep(name = "bzlmodrio-opencv", version = "2025.4.10.0-3.bcr3")
bazel_dep(name = "bzlmodrio-ni", version = "2025.2.0.bcr1")

setup_bzlmodrio_photonlib_cpp_dependencies = use_extension("//:maven_cpp_deps.bzl", "setup_bzlmodrio_photonlib_cpp_dependencies")
use_repo(
    setup_bzlmodrio_photonlib_cpp_dependencies,
    "bazelrio_org_photonvision_photonlib-cpp_headers",
    "bazelrio_org_photonvision_photonlib-cpp_linuxathena",
    "bazelrio_org_photonvision_photonlib-cpp_linuxx86-64",
    "bazelrio_org_photonvision_photonlib-cpp_osxuniversal",
    "bazelrio_org_photonvision_photonlib-cpp_windowsx86-64",
    "bazelrio_org_photonvision_photontargeting-cpp_headers",
    "bazelrio_org_photonvision_photontargeting-cpp_linuxathena",
    "bazelrio_org_photonvision_photontargeting-cpp_linuxx86-64",
    "bazelrio_org_photonvision_photontargeting-cpp_osxuniversal",
    "bazelrio_org_photonvision_photontargeting-cpp_windowsx86-64",
)

setup_bzlmodrio_photonlib_java_dependencies = use_extension("//:maven_java_deps.bzl", "setup_bzlmodrio_photonlib_java_dependencies")
use_repo(
    setup_bzlmodrio_photonlib_java_dependencies,
    "org_photonvision_photonlib_java",
    "org_photonvision_photontargeting_java",
)
