load("@rules_java//java:defs.bzl", "java_import")

java_import(
    name = "photonlib-java",
    jars = ["@org_photonvision_photonlib_java//jar:file"],
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib//libraries/java/wpilibj",
        "@bzlmodrio-photonlib//libraries/java/photontargeting-java",
    ],
)
