load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "shared_interface",
    srcs = select({
        "@rules_bazelrio//conditions:windows": ["@bazelrio_org_photonvision_photonlib-cpp_windowsx86-64//:static_libs"],
    }),
    linkstatic = True,
    tags = ["manual"],
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye32:bullseye32": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye64:bullseye64": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-photonlib//:__subpackages__"],
    deps = ["@bazelrio_org_photonvision_photonlib-cpp_headers//:headers"],
)

cc_library(
    name = "shared",
    srcs = select({
        "@rules_bazelrio//conditions:linux_x86_64": ["@bazelrio_org_photonvision_photonlib-cpp_linuxx86-64//:shared_libs"],
        "@rules_bazelrio//conditions:osx": ["@bazelrio_org_photonvision_photonlib-cpp_osxuniversal//:shared_libs"],
        "@rules_bazelrio//conditions:windows": ["@bazelrio_org_photonvision_photonlib-cpp_windowsx86-64//:shared_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_org_photonvision_photonlib-cpp_linuxathena//:shared_libs"],
    }),
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye32:bullseye32": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye64:bullseye64": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-photonlib//:__subpackages__"],
    deps = select({
        "@rules_bazelrio//conditions:windows": [":shared_interface"],
        "//conditions:default": [],
    }) + ["@bazelrio_org_photonvision_photonlib-cpp_headers//:headers"],
    alwayslink = 1,
)
