load("@rules_cc//cc:defs.bzl", "cc_library")

alias(
    name = "header_files",
    actual = "@bazelrio_org_photonvision_photontargeting-cpp_headers//:header_files",
    visibility = ["@bzlmodrio-photonlib//:__subpackages__"],
)

cc_library(
    name = "shared_interface",
    srcs = select({
        "@rules_bzlmodrio_toolchains//conditions:windows_x86_64": ["@bazelrio_org_photonvision_photontargeting-cpp_windowsx86-64//:shared_interface"],
    }),
    linkstatic = True,
    tags = ["manual"],
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-photonlib//:__subpackages__"],
    deps = ["@bazelrio_org_photonvision_photontargeting-cpp_headers//:headers"],
)

filegroup(
    name = "shared_raw",
    srcs = select({
        "@rules_bzlmodrio_toolchains//conditions:linux_x86_64": ["@bazelrio_org_photonvision_photontargeting-cpp_linuxx86-64//:shared"],
        "@rules_bzlmodrio_toolchains//conditions:osx": ["@bazelrio_org_photonvision_photontargeting-cpp_osxuniversal//:shared"],
        "@rules_bzlmodrio_toolchains//conditions:windows_x86_64": ["@bazelrio_org_photonvision_photontargeting-cpp_windowsx86-64//:shared"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_org_photonvision_photontargeting-cpp_linuxathena//:shared"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-photonlib//:__subpackages__"],
)

cc_library(
    name = "shared",
    srcs = [":shared_raw"],
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-photonlib//:__subpackages__"],
    deps = [] + select({
        "@rules_bzlmodrio_toolchains//conditions:windows_arm64": [":shared_interface"],
        "@rules_bzlmodrio_toolchains//conditions:windows_x86_64": [":shared_interface"],
        "//conditions:default": [],
    }) + ["@bazelrio_org_photonvision_photontargeting-cpp_headers//:headers"],
    alwayslink = 1,
)
