load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "shared_interface",
    srcs = select({
        "@rules_bzlmodrio_toolchains//conditions:windows": ["@bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_windowsx86-64//:shared_interface"],
    }),
    linkstatic = True,
    tags = ["manual"],
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye32:bullseye32": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye64:bullseye64": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-photonlib//:__subpackages__"],
)

filegroup(
    name = "shared_raw",
    srcs = select({
        "@rules_bzlmodrio_toolchains//conditions:linux_x86_64": ["@bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxx86-64//:shared"],
        "@rules_bzlmodrio_toolchains//conditions:osx": ["@bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_osxuniversal//:shared"],
        "@rules_bzlmodrio_toolchains//conditions:windows": ["@bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_windowsx86-64//:shared"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxathena//:shared"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-photonlib//:__subpackages__"],
)

cc_library(
    name = "shared",
    srcs = [":shared_raw"],
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye32:bullseye32": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye64:bullseye64": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-photonlib//:__subpackages__"],
    deps = [] + select({
        "@rules_bzlmodrio_toolchains//conditions:windows": [":shared_interface"],
        "//conditions:default": [],
    }),
    alwayslink = 1,
)
